--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Syljon/onepage/issues"
   },
-  "homepage": "https://github.com/Syljon/onepage#readme"
+  "homepage": "https://github.com/Syljon/onepage#readme",
+  "dependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
